# codex-deck

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  vite.config.mjs
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
scripts/: account-sort.test.mjs  api-cost.test.mjs  codex-bridge-plugin.mjs  codex-bridge.mjs  codex-bridge.test.mjs  local-today-observer.test.mjs  thread-status.test.mjs  usage-metrics.test.mjs
shared/: account-sort.mjs  api-cost.mjs  local-today-observer.mjs  normalize-codex-snapshot.mjs  thread-status.mjs  usage-metrics.mjs
src/: App.jsx  desktop.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/icons/: README.md
