[package]
name = "codex-deck"
version = "0.1.23"
description = "A lightweight local companion for Codex accounts and usage"
authors = ["Codex Deck contributors"]
license = "MIT"
repository = "https://github.com/IReneZL/codex-deck"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "codex_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
reqwest = { version = "0.13.4", features = ["form", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.5", features = ["tray-icon"] }
